Should be able to set a custom working directory in the cfg file now or from the command line in my case at work.